--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ djangorestframework==3.15.1
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
 pytz==2024.1
-setuptools==70.0.0
 sqlparse==0.5.0
 zope.interface==6.4.post2
+python-decouple
